--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Fetch - Sign Up</title>
+    <title>Fetch Rewards</title>
   </head>
   <body>
     <div id="root"></div>
